# sparo

./: .gitignore  BUILD.gn  Makefile  README  README.md  build.sh  compile_commands.json  machine.hpp
fctl-test/: Makefile  command.h  hello.c  test_hell.c
src/: BUILD.gn  Makefile  example.cc  json_test.cc  lazily_deallocated_deque.h  main.cc  thread_pool.h
src/base/: BUILD.gn  attributes.h  bounded-mpmc-queue.h  command_line.cc  command_line.h  config.h  dcheck_is_on.h  logging.h  macros.hc  optimization.h  port.h  thread_pool.h
src/base/containers/: circular_deque.h  vector_buffer.h
src/base/strings/: string_piece.cc  string_piece.h  string_view.cc  string_view.h
src/base/task/: lazily_deallocated_deque.h  task_loop.cc  task_loop.h
src/base/threading/: platform_thread.cc  platform_thread.h
src/demo/: Makefile  a.cc  client.c  client.cc  command_line.cc  command_line.h  eintr_wrapper.h  epoll_demo.c  epoll_lt_et.c  ipc_demo.cc  ipc_switches.h  shared_buffer.cc
src/main/: main.cc
src/mmap/: Makefile  appMmap.cc  build_config.h  immediate_crash.h  mymap.c
src/test/: al.cc  client.c  client.py  heap_test.cc  json_test.cc  server.cpp  server.py  stairDP.cc  task_loop_test.cc  test-webapp.py  thread_pool_example.cc  thread_pool_test.cc  thread_test.cc
